service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game
  name: service-2048
spec: 
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: app-2048
